# shap-experiments

./: README.md  main.py  pyproject.toml
data/: forest.csv  river_pollution_10000.csv  river_pollution_10171.csv  river_pollution_2500.csv  river_pollution_45.csv  river_pollution_5000.csv
notebooks/: CaseStudySolutionProcess1.ipynb  CaseStudySolutionProcess2.ipynb  Hands-on_testing.ipynb  Untitled.ipynb  Validate_simple_case.ipynb  explore_data.ipynb  forest.ipynb  river_pollution.ipynb  run1.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  forest-checkpoint.ipynb
shapley_values/: analysis.py  explanations.py  problems.py  solve.py  utilities.py  validation.py  visualizations.py
tests/: test_explanations.py  test_utilities.py
