[tool.poetry]
name = "shapley-values"
version = "0.1.0"
description = "Contains various experiments on computing shapley values in the context of interactive multiobjective optimization."
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
desdeo-problem = "^1.3.2"
desdeo-tools = "^1.5.4"
desdeo-mcdm = "^1.2.9"
desdeo-emo = "^1.3.1"
shap = "^0.39.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
ipykernel = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
